<resources>
    <string name="app_name">CRMGrupo5</string>

    <string name="text_clientes">Clientes</string>
    <string name="text_cliente">Cliente</string>
    <string name="text_restablecer_clientes">Restablecer Clientes</string>
    <string name="text_restablecer_reuniones">Restablecer Reuniones</string>
    <string name="text_restablecer_negocios">Restablecer Negocios</string>
    <string name="text_negocios">Negocios</string>
    <string name="text_reuniones">Reuniones</string>
    <string name="text_graficos">Ver gráficos</string>
    <string name="text_logo">Logo</string>
    <string name="text_inicio">MENÚ</string>
    <string name="text_nombre">Nombre</string>
    <string name="text_apellido">Apellido</string>
    <string name="text_correo">Correo</string>
    <string name="text_registrar">Registrar</string>

    <string name="text_nombre_Empresa">Nombre del negocio</string>
    <string name="text_ingresos">Ingresos</string>
    <string name="text_id_fiscal">ID-Fiscal</string>

    <string name="text_recordatorio">Recordatorio</string>
    <string name="text_si">SI</string>
    <string name="text_no">NO</string>
    <string name="text_nombre_reunion">Nombre del cliente</string>
    <string name="text_dia">Día</string>
    <string name="text_mes">Mes</string>

    <string name="text_contacto1">Contacto 1:</string>
    <string name="text_contacto2">Contacto 2:</string>
    <string name="text_contacto3">Contacto 3:</string>
    <string name="text_contacto4">Contacto 4:</string>
    <string name="text_contacto5">Contacto 5:</string>
    <string name="text_contacto6">Contacto 6:</string>
    <string name="text_contacto7">Contacto 7:</string>
    <string name="text_contacto8">Contacto 8:</string>

    <string name="text_numero1">1. </string>
    <string name="text_numero2">2. </string>
    <string name="text_numero3">3. </string>
    <string name="text_numero4">4. </string>
    <string name="text_numero5">5. </string>

    <string name="text_cabecera_numeros">Nº</string>
    <string name="text_cabecera_nombre">Nombre</string>
    <string name="text_cabecera_ingresos">Ingresos</string>
    <string name="text_cabecera_acciones">Acción</string>
    <string name="text_marketing">Marketing</string>


    <string name="text_nombre1">Nombre</string>
    <string name="text_correo1">Correo:</string>
    <string name="title_activity_negocios">Negocios</string>
    <string name="title_activity_reuniones">Reuniones</string>
    <string name="title_activity_clientes">Clientes</string>
    <string name="title_activity_graficos">Gráficos</string>

    <string name="text_numCostes">Número Costes</string>
    <string name="text_numGanancias">Número Ganacias</string>

    <string name="text_costes">COSTES:</string>
    <string name="text_ganancias">GANANCIAS:</string>
    <string name="text_presupuesto">Calcular presupuesto</string>
    <string name="text_operacion">Realizar Operacion</string>


</resources>
