<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_reuniones"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:text="@string/text_reuniones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821"
        tools:text="@string/text_reuniones" />

    <Button
        android:id="@+id/button_contactos"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:text="@string/text_clientes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.539"
        tools:text="@string/text_clientes" />

    <Button
        android:id="@+id/button_negocios"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:text="@string/text_negocios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.678"
        tools:text="@string/text_negocios" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="347dp"
        android:layout_height="239dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="410dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>